# CS-IA

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  GUI_ARCHITECTURE.md  LibraryGUI.cpp  LibraryGUI.h  LibraryManagementSystem.cpp  LibraryManagementSystem.h  Makefile  Makefile_complete  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_GUI.md  RedBlackTree.h  main.cpp  main_gui.cpp  setup.sh
docs/: CS IA.md  GUI_ARCHITECTURE.md  LMS_BRUTEFORCE_TEST_REPORT.md  PROJECT_OVERVIEW.md
scripts/: run_deep_tests.ps1  run_lms_bruteforce.ps1  run_stress_test.ps1  run_tests.ps1
src/: Book.h  LibraryManagementSystem.cpp  LibraryManagementSystem.h  RedBlackTree.h  main.cpp  main_gui.cpp
tests/: library_unit_tests.cpp  lms_bruteforce_test.cpp  rbtree_stress_test.cpp
